# TACDMPC

./: .gitignore  README.md  config.py  pyproject.toml  requirements.txt  utils.py
ACMPC/: Actor.py  Checkpoint_Manager.py  Critic.py  ReplayBuffer.py  Tracking_actor.py  __init__.py  actor.py  checkpoint.py  critic_transformer.py  parallel_env.py  tracking_actor.py  trainer.py  training_loop.py
ActorCritic/: __init__.py
Debug Test/: test_batch_tracking.py
DepracatedKoopmanAutoEncoders/: koopmantest.py
DeprecatedActorCritic/: ActorNet.py
DifferentialMPC/: AugmentedLagrangianManager.py  __init__.py  controller.py  cost.py  utils.py
KoopmanAutoEncodersDepracated/: KoopMan.py
examples/: 01_demo_double_integratorpy.py  01_demo_linear.py  01_demo_linear_AC.py  01_demo_linear_tracking.py  01_simple.py  02_demo_cartpole_AC.py  02_demo_cartpole_regulation.py  02_demo_cartpole_regulation_weight_matrix_optimization.py  03_demo_cartpole_regulationAC.py  03_demo_unicycle_AC.py  03_demo_unicycle_tracking.py  04_minimal_actor.py  05_double_integrator_ac_vs_baseline.py  06_double_integrator.py  KoopmanBenchMarkDeprecated.py  KoopmanPreTrainingDeprecated.py  __main__.py  gradientflowtest.py  ilqrgradientprptest.py  testforwardpass.py
tests/: conftest.py  test_actor_get_action.py  test_actor_grad.py  test_actor_grad_warm.py  test_actor_net.py  test_actor_reset.py  test_actor_warm_start.py  test_amp_cuda.py  test_critic_forward.py  test_example_double_integrator.py  test_forward.py  test_gae.py  test_gradcheck.py  test_jacobian_fallback.py  test_training_loop.py
