[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "tacdmpc"
version         = "0.1.0"
description     = "Differentiable MPC with Actor-Critic integration"
readme          = "README.md"
license         = {file = "Private"}
requires-python = ">=3.9"

# dipendenze runtime minime
dependencies = [
  "torch>=2.2",     
  "numpy>=1.24",
  "gymnasium>=0.28",
  "tqdm>=4.66"
]

# dipendenze extra (sviluppo, test, ecc.)
[project.optional-dependencies]
dev = ["pytest", "pipreqs", "black", "ruff"]

[project.urls]
Homepage = "https://github.com/<tuo_user>/TACDMPC"
